--- a/index.html
+++ b/index.html
@@ -9,31 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
     />
-    <!-- Include Firebase SDK modular syntax -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js"></script>
-
-    <script>
-      // Your web app's Firebase configuration
-      const firebaseConfig = {
-        apiKey: 'AIzaSyAKYlv_2NU1yEkC0hSeOIqkaF5r1fvjOl4',
-        authDomain: 'catan-sb.firebaseapp.com',
-        projectId: 'catan-sb',
-        storageBucket: 'catan-sb.appspot.com',
-        messagingSenderId: '1051762635231',
-        appId: '1:1051762635231:web:6d7a1dc1ef10827925146a',
-      };
-
-      // Initialize Firebase
-      const app = firebase.initializeApp(firebaseConfig);
-      const auth = firebase.auth();
-    </script>
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <title>Catan Score-Keeper</title>
   </head>
+
   <body
     class="bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-amber-700 via-orange-300 to-rose-800 bg-no-repeat"
   >
@@ -82,6 +63,49 @@
         </div>
       </div>
     </nav>
+    <!-- Sign Up -->
+    <div class="container absolute items-end right-0">
+      <div id="login-box" class="flex flex-col items-end my-4 px-20">
+        <div class="flex flex-col space-y-6">
+          <input
+            type="text"
+            id="userName"
+            name="username"
+            placeholder="Enter your username"
+            class="my-2 p-2 w-52 bg-transparent border-2 text-white"
+          />
+          <input
+            type="email"
+            id="email"
+            placeholder="Enter your email"
+            class="my-2 p-2 w-52 bg-transparent border-2 text-white"
+          />
+          <input
+            type="password"
+            id="password"
+            placeholder="Enter your password"
+            class="my-2 p-2 w-52 bg-transparent border-2 text-white"
+          />
+          <div class="flex flex-col items-center space-y-3">
+            <button
+              id="signUp"
+              name="signup_submit"
+              class="container bg-white rounded-full py-2 cursor-pointer hover:opacity-70 transition"
+            >
+              Sign Up
+            </button>
+            <div class="or text-center">OR</div>
+            <button
+              id="signIn"
+              name="signinp_submit"
+              class="container bg-yellow-500 rounded-full py-2 cursor-pointer hover:opacity-70 transition"
+            >
+              Sign In
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Home Section -->
     <section id="home">
@@ -104,7 +128,6 @@
         </div>
       </div>
     </section>
-
     <!-- Randomizer Section-->
     <section id="randomizer">
       <div id="content-wrapper" class="py-64 px-32">
@@ -143,51 +166,15 @@
         </div>
       </div>
     </section>
-
     <!-- Scripts -->
-    <script src="jquery.min.js" type="text/javascript"></script>
-    <script src="catan.js" type="text/javascript"></script>
+    <script src="js/jquery.min.js" type="text/javascript"></script>
+    <script src="js/catan.js" type="text/javascript"></script>
     <script type="text/javascript" language="javascript">
       $(document).ready(function () {
         init();
       });
     </script>
-    <script>
-      // Function to handle sign-up
-      function signUp() {
-        var email = prompt('Enter your email:');
-        var password = prompt('Enter your password:');
-
-        firebase
-          .auth()
-          .createUserWithEmailAndPassword(email, password)
-          .then((userCredential) => {
-            // User signed up successfully
-            var user = userCredential.user;
-            console.log('User signed up:', user);
-          })
-          .catch((error) => {
-            console.error('Sign-up error:', error.message);
-          });
-      }
-
-      // Function to handle login
-      function login() {
-        var email = prompt('Enter your email:');
-        var password = prompt('Enter your password:');
-
-        firebase
-          .auth()
-          .signInWithEmailAndPassword(email, password)
-          .then((userCredential) => {
-            // User logged in successfully
-            var user = userCredential.user;
-            console.log('User logged in:', user);
-          })
-          .catch((error) => {
-            console.error('Login error:', error.message);
-          });
-      }
-    </script>
+    <!-- Firebase Scripts -->
+    <script src="js/auth.js" type="module"></script>
   </body>
 </html>
