--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
     </section>
     <!-- Randomizer Section-->
     <section id="randomizer">
-      <div id="content-wrapper" class="py-64 px-32">
+      <div id="content-wrapper" class="px-32">
         <div id="content-left" class="bg-transparent">
-          <div id="gen-options">
+          <div id="gen-options" class="">
             <div>
               <span class="text-4xl font-semibold"
                 ><b>Please select game type:</b></span
@@ -156,13 +156,13 @@
             id="gen-map-button"
             type="button"
             disabled="false"
-            class="font-semibold text-2xl"
+            class="font-semibold text-xl bg-yellow-500 py-3 px-8 rounded-2xl my-4"
           >
             Loading resources...
           </button>
         </div>
-        <div id="content-right">
-          <div id="map-container" class="bg-black"></div>
+        <div id="content-right" class="flex mx-auto">
+          <div id="map-container" class="bg-transparent"></div>
         </div>
       </div>
     </section>
@@ -171,6 +171,11 @@
     <script src="js/catan.js" type="text/javascript"></script>
     <script type="text/javascript" language="javascript">
       $(document).ready(function () {
+        init();
+      });
+    </script>
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
         init();
       });
     </script>
