--- a/index.html
+++ b/index.html
@@ -51,19 +51,22 @@
         <div
           class="hidden items-center space-x-6 font-bold md:flex px-20 uppercase"
         >
-          <div class="hover:text-yellow-500 text-gray-700" onclick="login()">
+          <div
+            class="hover:text-yellow-500 text-gray-700"
+            onclick="togglePopup('signinPopup')"
+          >
             Login
           </div>
           <a
             href="#"
-            onclick="signUp()"
+            onclick="togglePopup('signupPopup')"
             class="px-8 font-bold text-white bg-yellow-500 hover:opacity-70 p-2 rounded-2xl"
             >Sign Up</a
           >
         </div>
       </div>
     </nav>
-    <!-- Sign Up -->
+    <!-- Sign Up
     <div class="container absolute items-end right-0">
       <div id="login-box" class="flex flex-col items-end my-4 px-20">
         <div class="flex flex-col space-y-6">
@@ -97,7 +100,7 @@
             <div class="or text-center">OR</div>
             <button
               id="signIn"
-              name="signinp_submit"
+              name="signin_submit"
               class="container bg-yellow-500 rounded-full py-2 cursor-pointer hover:opacity-70 transition"
             >
               Sign In
@@ -105,6 +108,91 @@
           </div>
         </div>
       </div>
+    </div> -->
+
+    <!-- NEW CODE !!!! -->
+
+    <!-- Pop-up Container Sign Up-->
+    <div class="flex place-content-end mx-24">
+      <form
+        id="signupPopup"
+        class="hidden absolute flex-col border-2 border-gray-800 z-50 bg-transparent rounded-lg bg-gray-800 w-56 pl-1 pt-6"
+      >
+        <span
+          onclick="closePopupSignUp()"
+          class="absolute top-1 right-2 cursor-pointer text-white text-2xl items-center"
+          >&times;</span
+        >
+
+        <!-- Inputs for Sign Up -->
+        <input
+          type="text"
+          id="userName"
+          name="username"
+          placeholder="Enter your username"
+          class="my-2 p-2 w-52 bg-transparent border-2 text-white"
+        />
+        <input
+          type="email"
+          id="email"
+          placeholder="Enter your email"
+          class="my-2 p-2 w-52 bg-transparent border-2 text-white"
+        />
+        <input
+          type="password"
+          id="password"
+          placeholder="Enter your password"
+          class="my-2 p-2 w-52 bg-transparent border-2 text-white"
+        />
+
+        <div class="flex flex-col items-center space-y-3">
+          <button
+            id="signUp"
+            name="signup_submit"
+            class="bg-white rounded-full py-2 my-4 cursor-pointer hover:opacity-70 transition w-36"
+          >
+            Sign Up
+          </button>
+        </div>
+      </form>
+    </div>
+
+    <!-- Pop-up Container Sign In-->
+    <div class="flex place-content-end mx-24">
+      <form
+        id="signinPopup"
+        class="hidden absolute flex-col border-2 border-gray-800 z-50 bg-transparent rounded-lg bg-gray-800 w-56 pl-1 pt-6"
+      >
+        <span
+          onclick="closePopupSignIn()"
+          class="absolute top-1 right-2 cursor-pointer text-white text-2xl items-center"
+          >&times;</span
+        >
+
+        <!-- Inputs for Sign In -->
+        <input
+          type="emailsignin"
+          id="emailsignin"
+          placeholder="Enter your email"
+          class="my-2 p-2 w-52 bg-transparent border-2 text-white"
+        />
+        <input
+          type="password"
+          id="passwordsignin"
+          placeholder="Enter your password"
+          class="my-2 p-2 w-52 bg-transparent border-2 text-white"
+        />
+
+        <div class="flex flex-col items-center space-y-3">
+          <button
+            id="signIn"
+            name="signin_submit"
+            class="bg-white rounded-full py-2 my-4 cursor-pointer hover:opacity-70 transition w-36"
+          >
+            Sign In
+          </button>
+        </div>
+      </form>
     </div>
 
     <!-- Home Section -->
@@ -117,9 +205,7 @@
             class="p-6 max-w-full"
           />
         </div>
-        <div
-          class="flex flex-col items-center md:max-w-7xl py-3 md:py-8 mb-20 md:mb-32"
-        >
+        <div class="flex flex-col items-center md:max-w-7xl py-3 md:py-8">
           <h1
             class="text-5xl md:text-7xl font-semibold text-yellow-700 text-center"
           >
@@ -129,44 +215,50 @@
       </div>
     </section>
     <!-- Randomizer Section-->
-    <section id="randomizer">
-      <div id="content-wrapper" class="px-32">
-        <div id="content-left" class="bg-transparent">
-          <div id="gen-options" class="">
-            <div>
-              <span class="text-4xl font-semibold"
-                ><b>Please select game type:</b></span
-              ><br />
-              <input
-                type="radio"
-                name="game-type"
-                value="normal"
-                checked
-                class="py-2"
-              />Normal (1-4 players)<br />
-              <input
-                class="text-green-600 py-2"
-                type="radio"
-                name="game-type"
-                value="expanded"
-              />Expansion (5-6 players)<br />
-            </div>
-          </div>
+    <section id="randomizer" class="overflow-hidden justify-center">
+      <div id="content-left" class="flex container items-start">
+        <div id="gen-options" class="pt-32 pl-20 w-1/3">
+          <span class="text-4xl font-semibold"
+            ><b>Please select game type:</b></span
+          >
+          <br />
+          <input
+            type="radio"
+            name="game-type"
+            value="normal"
+            checked
+            class="my-4"
+          />Normal (1-4 players)<br />
+          <input
+            type="radio"
+            name="game-type"
+            value="expanded"
+            class="py-2"
+          />Expansion (5-6 players)<br />
           <button
             id="gen-map-button"
             type="button"
-            disabled="false"
+            disabled="true"
             class="font-semibold text-xl bg-yellow-500 py-3 px-8 rounded-2xl my-4"
           >
             Loading resources...
           </button>
         </div>
-        <div id="content-right" class="flex mx-auto">
-          <div id="map-container" class="bg-transparent"></div>
+        <div
+          id="map-container"
+          class="w-2/3 place-items-start mr-40 mb-96 pb-96"
+        >
+          <!-- Map will be generated here -->
         </div>
       </div>
     </section>
+
     <!-- Scripts -->
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+        init();
+      });
+    </script>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/catan.js" type="text/javascript"></script>
     <script type="text/javascript" language="javascript">
@@ -174,11 +266,47 @@
         init();
       });
     </script>
+    <!-- SignUP PopUp Script -->
     <script>
-      document.addEventListener('DOMContentLoaded', function () {
-        init();
-      });
+      function togglePopupSignUp() {
+        togglePopup('signupPopup');
+      }
     </script>
+
+    <!-- SignIn PopUp Script -->
+    <script>
+      function togglePopupSignIn() {
+        togglePopup('signinPopup');
+      }
+    </script>
+
+    <!-- Common Popup Toggle Script -->
+    <script>
+      function togglePopup(popupId) {
+        const popups = ['signinPopup', 'signupPopup'];
+
+        // Hide all popups
+        popups.forEach((popup) => {
+          const popupElement = document.getElementById(popup);
+          if (popupElement) {
+            popupElement.style.display = 'none';
+          }
+        });
+
+        // Show the selected popup
+        const selectedPopup = document.getElementById(popupId);
+        if (selectedPopup) {
+          selectedPopup.style.display = 'block';
+        }
+      }
+      function closePopupSignUp() {
+        document.getElementById('signupPopup').style.display = 'none';
+      }
+      function closePopupSignIn() {
+        document.getElementById('signinPopup').style.display = 'none';
+      }
+    </script>
+
     <!-- Firebase Scripts -->
     <script src="js/auth.js" type="module"></script>
   </body>
