--- a/scoreboards.html
+++ b/scoreboards.html
@@ -1,10 +1,11 @@
-<!-- scoreboards.html -->
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="js/auth.js" type="module"></script>
     <link rel="stylesheet" href="css/style.css" type="text/css" />
+
     <title>Scoreboards - Catan Score-Keeper</title>
   </head>
   <body
@@ -81,72 +82,165 @@
         <p class="text-xl text-center py-2">$X</p>
       </div>
     </div>
-    <!-- My Games -->
-    <div class="flex md:flex-row mx-auto items-start py-7 px-20">
-      <h1 class="text-3xl md:text-4xl font-bold">My Games</h1>
-      <a
-        href="index.html"
+
+    <!-- My Games Section -->
+    <div class="flex md:flex-row mx-auto items-start pt-7 px-20">
+      <h1 class="text-3xl md:text-4xl font-bold">Games</h1>
+      <!-- Button for Add Game -->
+      <div
         class="container flex items-center border-2 border-black rounded-full w-fit mx-6 hover:bg-yellow-500 hover:border-yellow-500"
+        onclick="openPopup()"
       >
-        <img src="assets/icons/plus-svgrepo-com.svg" alt="" class="w-8 p-2" />
-      </a>
+        <button type="button" id="openPopup" class="border-none bg-transparent">
+          <img
+            src="assets/icons/plus-svgrepo-com.svg"
+            alt="Add Game"
+            class="w-8 p-2"
+            onclick="console.log('Button clicked'); openPopup();"
+          />
+        </button>
+      </div>
+      <!-- Pop-up Container -->
+      <form
+        id="popup"
+        class="hidden absolute flex-col w-fit container border-2 border-gray-800 z-50 bg-transparent p-2 rounded-lg bg-gray-800 md:ml-48"
+      >
+        <span
+          onclick="closePopup()"
+          class="absolute top-2 right-2 cursor-pointer text-white text-2xl"
+          >&times;</span
+        >
+
+        <!-- Inputs for Game Information -->
+        <input
+          id="gameNumber"
+          type="text"
+          class="block max-w-sm border-b-2 border-white p-2 bg-transparent"
+          name="gameNumber"
+          placeholder="Game #"
+          oninput="changeTextColor(this)"
+        />
+        <input
+          id="gameType"
+          type="text"
+          class="block max-w-sm border-b-2 border-white p-2 bg-transparent"
+          name="gameType"
+          placeholder="Type: Reg/Ext"
+          oninput="changeTextColor(this)"
+        />
+        <input
+          id="player1"
+          type="text"
+          class="block max-w-sm border-b-2 border-white p-2 bg-transparent"
+          name="player1"
+          placeholder="Player 1"
+          oninput="changeTextColor(this)"
+        />
+        <input
+          id="player2"
+          type="text"
+          class="block max-w-sm border-b-2 border-white p-2 bg-transparent"
+          name="player2"
+          placeholder="Player 2"
+          oninput="changeTextColor(this)"
+        />
+        <input
+          id="player3"
+          type="text"
+          class="flex max-w-sm border-b-2 border-white p-2 bg-transparent"
+          name="player3"
+          placeholder="Player 3"
+          oninput="changeTextColor(this)"
+        />
+        <input
+          id="player4"
+          type="text"
+          class="block max-w-sm border-b-2 border-white p-2 bg-transparent"
+          name="player4"
+          placeholder="Player 4"
+          oninput="changeTextColor(this)"
+        />
+        <input
+          id="player5"
+          type="text"
+          class="block max-w-sm border-b-2 border-white p-2 bg-transparent"
+          name="player5"
+          placeholder="Player 5"
+          oninput="changeTextColor(this)"
+        />
+        <input
+          id="player6"
+          type="text"
+          class="block max-w-sm border-b-2 border-white p-2 bg-transparent"
+          name="player6"
+          placeholder="Player 6"
+          oninput="changeTextColor(this)"
+        />
+        <input
+          id="winner"
+          type="text"
+          class="block max-w-sm border-b-2 border-white p-2 bg-transparent"
+          name="winner"
+          placeholder="Winner"
+          oninput="changeTextColor(this)"
+        />
+        <input
+          id="runnerUp"
+          type="text"
+          class="block max-w-sm border-b-2 border-white p-2 bg-transparent"
+          name="runnerUp"
+          placeholder="Runner Up"
+          oninput="changeTextColor(this)"
+        />
+
+        <!-- Submit Button -->
+        <button
+          id="submitGame"
+          class="my-2 py-2 w-full bg-yellow-500 rounded-md cursor-pointer"
+        >
+          Submit
+        </button>
+      </form>
     </div>
-    <!-- Games Table -->
-    <div class="flex px-20 pt-5 pb-20">
-      <!-- Tabs / Classes -->
-      <div
-        class="flex flex-grow border-2 md:border-r-0 place-content-center border-gray-600 text-lg"
+
+    <!-- Insert dynamic table here -->
+    <div
+      class="relative overflow-x-auto shadow-md sm:rounded-lg mb-96 mt-5 border-2 border-gray-800 mx-20"
+    >
+      <table
+        class="w-full text-lg text-center text-gray-700 dark:text-gray-900 table-fixed"
       >
-        <h1 class="font-semibold text-xl text-center px-3 py-2">Game #</h1>
-      </div>
-      <div
-        class="flex flex-grow border-2 md:border-r-0 place-content-center border-gray-600 text-lg"
-      >
-        <h1 class="font-semibold text-xl text-center px-3 py-2">
-          Type: Reg/Ext
-        </h1>
-      </div>
-      <div
-        class="flex flex-grow border-2 md:border-r-0 place-content-center border-gray-600 text-lg"
-      >
-        <h1 class="font-semibold text-xl text-center px-3 py-2">Player 1</h1>
-      </div>
-      <div
-        class="flex flex-grow border-2 md:border-r-0 place-content-center border-gray-600 text-lg"
-      >
-        <h1 class="font-semibold text-xl text-center px-3 py-2">Player 2</h1>
-      </div>
-      <div
-        class="flex flex-grow border-2 md:border-r-0 place-content-center border-gray-600 text-lg"
-      >
-        <h1 class="font-semibold text-xl text-center px-3 py-2">Player 3</h1>
-      </div>
-      <div
-        class="flex flex-grow border-2 md:border-r-0 place-content-center border-gray-600 text-lg"
-      >
-        <h1 class="font-semibold text-xl text-center px-3 py-2">Player 4</h1>
-      </div>
-      <div
-        class="flex flex-grow border-2 md:border-r-0 place-content-center border-gray-600 text-lg"
-      >
-        <h1 class="font-semibold text-xl text-center px-3 py-2">Player 5</h1>
-      </div>
-      <div
-        class="flex flex-grow border-2 md:border-r-0 place-content-center border-gray-600 text-lg"
-      >
-        <h1 class="font-semibold text-xl text-center px-3 py-2">Player 6</h1>
-      </div>
-      <div
-        class="flex flex-grow border-2 md:border-r-0 border-gray-600 text-lg place-content-center"
-      >
-        <h1 class="font-semibold text-xl text-center px-3 py-2">Winner</h1>
-      </div>
-      <div
-        class="flex flex-grow border-2 border-gray-600 text-lg place-content-center"
-      >
-        <h1 class="font-semibold text-xl text-center px-3 py-2">Runner Up</h1>
-      </div>
-      <!-- Insert dynamic table here -->
+        <thead class="text-xl text-gray-50 uppercase bg-gray-800">
+          <th scope="col" class="py-3 border-r border-gray-300">Game</th>
+          <th scope="col" class="py-3 border-r border-gray-300">Type</th>
+          <th scope="col" class="py-3 border-r border-gray-300">Player 1</th>
+          <th scope="col" class="py-3 border-r border-gray-300">Player 2</th>
+          <th scope="col" class="py-3 border-r border-gray-300">Player 3</th>
+          <th scope="col" class="py-3 border-r border-gray-300">Player 4</th>
+          <th scope="col" class="py-3 border-r border-gray-300">Player 5</th>
+          <th scope="col" class="py-3 border-r border-gray-300">Player 6</th>
+          <th scope="col" class="py-3 border-r border-gray-300">Winner</th>
+          <th scope="col" class="py-3">RunnerUp</th>
+        </thead>
+        <tbody id="tbody1" class=""></tbody>
+      </table>
     </div>
+
+    <!-- Scripts -->
+    <script>
+      // showing/hiding the pop-up
+      function openPopup() {
+        document.getElementById('popup').style.display = 'block';
+      }
+
+      function closePopup() {
+        document.getElementById('popup').style.display = 'none';
+      }
+    </script>
+    <script>
+      function changeTextColor(input) {
+        input.style.color = 'white';
+      }
+    </script>
   </body>
 </html>
