--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="flex place-content-end mx-24">
       <form
         id="signupPopup"
-        class="hidden absolute flex-col border-2 border-gray-800 z-50 bg-transparent rounded-lg bg-gray-800 w-56 pl-1 pt-6"
+        class="hidden absolute flex-col border-2 border-gray-800 z-50 rounded-lg bg-gray-800 w-56 pl-1 pt-6"
       >
         <span
           onclick="closePopupSignUp()"
@@ -161,7 +161,7 @@
     <div class="flex place-content-end mx-24">
       <form
         id="signinPopup"
-        class="hidden absolute flex-col border-2 border-gray-800 z-50 bg-transparent rounded-lg bg-gray-800 w-56 pl-1 pt-6"
+        class="hidden absolute flex-col border-2 border-gray-800 z-50 rounded-lg bg-gray-800 w-56 pl-1 pt-6"
       >
         <span
           onclick="closePopupSignIn()"
@@ -171,7 +171,7 @@
 
         <!-- Inputs for Sign In -->
         <input
-          type="emailsignin"
+          type="email"
           id="emailsignin"
           placeholder="Enter your email"
           class="my-2 p-2 w-52 bg-transparent border-2 text-white"
@@ -215,9 +215,9 @@
       </div>
     </section>
     <!-- Randomizer Section-->
-    <section id="randomizer" class="overflow-hidden justify-center">
-      <div id="content-left" class="flex container items-start">
-        <div id="gen-options" class="pt-32 pl-20 w-1/3">
+    <section id="randomizer" class="overflow-hidden">
+      <div id="content-left" class="flex flex-col md:flex-row items-start">
+        <div id="gen-options" class="pt-32 pl-20 md:w-1/3">
           <span class="text-4xl font-semibold"
             ><b>Please select game type:</b></span
           >
@@ -244,10 +244,7 @@
             Loading resources...
           </button>
         </div>
-        <div
-          id="map-container"
-          class="w-2/3 place-items-start mr-40 mb-96 pb-96"
-        >
+        <div id="map-container" class="flex flex-col">
           <!-- Map will be generated here -->
         </div>
       </div>
